k8s/base/services/grafana-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-strip
  namespace: goverse
spec:
  stripPrefix:
    prefixes:
      - "/grafana"
