k8s/base/services/auth-middleware-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-middleware
spec:
  selector:
    app: auth-middleware
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
