k8s/base/services/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
