k8s/base/services/nodeexplore.-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: goverse
spec:
  selector:
    app: node-exporter
  ports:
    - protocol: TCP
      port: 9100
      targetPort: 9100
  type: ClusterIP
