k8s/base/services/room-service.yml
apiVersion: v1
kind: Service
metadata:
  name: room-service
spec:
  selector:
    app: room-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    
    - name: grpc
      port: 50052
      targetPort: 50052
  type: ClusterIP
