k8s/base/services/traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
    - name: dashboard
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: metrics
      protocol: TCP
      port: 8082
      targetPort: 8082
  type: LoadBalancer
