k8s/base/services/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8085
      targetPort: 8085
    - name: grpc
      port: 50051
      targetPort: 50051
  type: ClusterIP
